--- a/package.json
+++ b/package.json
@@ -3,28 +3,24 @@
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
-  "dependencies": {
-    "gulp": "^3.9.0",
-    "gulp-jade": "^1.1.0",
-    "browser-sync": "^2.8.1",
-    "gulp-plumber": "^1.0.1",
-    "gulp-stylus": "^2.0.5",
-    "gulp-util": "^3.0.6",
-    "webpack-stream": "^2.1.0"
-  },
   "devDependencies": {
-    "autoprefixer-loader": "^2.0.0",
-    "babel": "^5.8.20",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^0.15.6",
-    "gulp-autoprefixer": "^2.3.1",
-    "gulp-uglify": "^1.2.0",
-    "react": "^0.13.3",
+    "html-webpack-plugin": "^2.28.0",
+    "react-dom": "^15.6.1",
     "style-loader": "^0.12.3",
-    "stylus-loader": "^1.2.1"
+    "stylus-loader": "^1.2.1",
+    "webpack": "^3.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server --content-base dist --config ./webpack.config.js --hot --inline"
   },
   "author": "Dafrok",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react": "^15.6.1"
+  }
 }
