--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-digiclock",
   "version": "1.0.0",
   "description": "",
-  "main": "gulpfile.js",
+  "main": "src/index.js",
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
