--- a/package.json
+++ b/package.json
@@ -1,27 +1,21 @@
 {
-  "name": "react-digiclock",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/index.js",
-  "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.15.6",
-    "html-webpack-plugin": "^2.28.0",
-    "react-dom": "^15.6.1",
-    "style-loader": "^0.12.3",
-    "stylus-loader": "^1.2.1",
-    "webpack": "^3.0.0"
-  },
-  "scripts": {
-    "dev": "webpack-dev-server --content-base dist --config ./webpack.config.js --hot --inline",
-    "docs": "webpack -p"
-  },
-  "author": "Dafrok",
-  "license": "ISC",
-  "dependencies": {
-    "react": "^15.6.1"
-  }
+    "name": "react-digiclock",
+    "version": "1.0.0",
+    "description": "",
+    "main": "src/index.js",
+    "devDependencies": {
+        "@babel/core": "^7.13.16",
+        "parcel-bundler": "^1.12.5",
+        "stylus": "^0.54.8"
+    },
+    "scripts": {
+        "dev": "parcel src/index.html --open",
+        "docs": "parcel src/index.html"
+    },
+    "author": "Dafrok",
+    "license": "ISC",
+    "dependencies": {
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2"
+    }
 }
