--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     },
     "scripts": {
         "dev": "parcel src/index.html --open",
-        "docs": "parcel src/index.html"
+        "docs": "parcel build src/index.html --public-url . --out-dir docs"
     },
     "author": "Dafrok",
     "license": "ISC",
